the guinea pig and the sandwich maker!

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head> 
     <meta charset="UTF-8">
     <title>Calculator</title>
@@ -21,13 +21,14 @@
        <label><input id="add" type="button" name="calcButtons" value="Add" checked="checked"></label>
        <label><input id="subtract" type="button" name="calcButtons" value="Subtract"></label>
        <label><input id="multiply" type="button" name="calcButtons" value="Multiply"></label>
-       <label><input id="divide" type="button" name="calcButtons" value="Divide"></label> 
+       <label><input id="divide" type="button" name="calcButtons" value="Divide"></label>
+       <label><input id="reset" type="button" name="calcButtons" value="Reset"></label> 
        <br> 
     </div>
     <hr>
         <small>Output area</small>
         <div id="output-target"></div>
 
-    <script type="text/javascript" src="calculator.js"></script>
+    <script type="text/javascript" src="calculator2.js"></script>
 </body>
 </html>
