The finished sandwith makergit status! Finallygit statusgit status!

--- a/sandwich-maker/index.html
+++ b/sandwich-maker/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html> 	
 <html> 
 <head> 
 	<title>My Bacon Sandwich Maker</title>
@@ -44,7 +44,9 @@
 		<input type="checkbox" id="ranch">Ranch<br>
 	</section>
 	<br>
-	<input type="button" value="Price" id="price">
+	<div>
+		TOTAL
+	</div>
 	<div id="output-area"></div>
 	<script type="text/javascript" src="javascripts/sandWichMaker.js"></script>
 	<script type="text/javascript" src="javascripts/bread.js"></script>
